--- a/main.css
+++ b/main.css
@@ -21,6 +21,20 @@ main {
   margin-top: 100px;
   display: block;
 }
+.logo-container {
+  display: flex;
+  align-items: center;
+}
+.logo-container .logo {
+  height: 70px;
+  margin-right: 15px;
+  position: relative;
+  animation: logo 1s ease-out forwards;
+}
+.logo-container p {
+  margin-bottom: 0;
+  position: relative;
+}
 header {
   padding: 15px 0;
   position: fixed;
@@ -29,6 +43,7 @@ header {
   background-color: #fff;
   width: 100%;
   box-shadow: 1px 1px 6px #c7c7c7;
+  z-index: 2;
 }
 header .container {
   display: flex;
@@ -53,7 +68,6 @@ header ul ul {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  transition: 0.3s all ease-out;
 }
 header ul ul li {
   margin-right: 0;
@@ -70,14 +84,14 @@ header li:hover ul {
 header li:hover > a {
   color: #f17c3a;
 }
+header li.active {
+  border-bottom: 1px solid #f17c3a;
+}
 header li a {
   text-decoration: none;
   color: #000;
   padding: 5px;
   display: block;
-}
-.logo {
-  height: 70px;
 }
 .banner {
   width: 100%;
@@ -150,4 +164,59 @@ footer {
 footer p {
   margin-bottom: 0;
 }
-
+.animationBlock {
+  position: relative;
+}
+.animationBlock:before {
+  content: '';
+  height: 100%;
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  right: 0;
+  animation: showText 1s ease-out forwards;
+}
+@keyframes logo {
+  0% {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  100% {
+    opacity: 1;
+    transform: none;
+  }
+}
+@keyframes showText {
+  0% {
+    width: 100%;
+  }
+  100% {
+    width: 0;
+  }
+}
+.news {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+.news-item {
+  flex: 0 0 calc(33.333% - 15px);
+  margin-bottom: 30px;
+  margin-right: 15px;
+  border: 1px solid #c7c7c7;
+}
+.news-content {
+  padding: 15px 20px;
+}
+.news-content .h2 {
+  margin-bottom: 5px;
+}
+.news-content p {
+  margin-bottom: 0;
+}
+.news-img {
+  width: 100%;
+  height: 150px;
+  background-position: center;
+}
